test/tests/operators/sigma/refresh_interval_zero.txt
error: `refresh_interval` must be a positive duration
 --> tests/operators/sigma/refresh_interval_zero.tql:6:73
  |
6 | sigma f"{env("TENZIR_INPUTS")}/sigma/basic-rule.yaml", refresh_interval=0s
  |                                                                         ^^ 
  |
